CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
project (GUI)

set (SOURCES StackQTController.cpp StackQTUi.cpp)

if (QT_BUILT)
    QT4_WRAP_CPP(QTHEADERS StackQTUi.h StackQTController.h)
    QT4_WRAP_UI(QTFORMS neuroproof_stack_viewer.ui)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
    if (APPLE) 
	add_library (Gui ${SOURCES} ${QTFORMS} ${QTHEADERS})
    else()
	add_library (Gui SHARED ${SOURCES} ${QTFORMS} ${QTHEADERS})
    endif()	
else()
    if (APPLE) 
	add_library (Gui ${SOURCES})
    else()
	add_library (Gui SHARED ${SOURCES})
    endif()	
endif()

install (TARGETS Gui DESTINATION lib${LIB_SUFFIX})
