CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
project (StackGui)

set (SOURCES StackSession.cpp StackPlaneController.cpp StackPlaneView.cpp StackBodyView.cpp StackBodyController.cpp)

if (QT_BUILT)
    QT4_WRAP_CPP(QTHEADERS StackPlaneController.h)
    if (APPLE) 
	add_library (StackGui ${SOURCES} ${QTHEADERS})
    else()
	add_library (StackGui SHARED ${SOURCES} ${QTHEADERS})
    endif()	
else()
    if (APPLE) 
	add_library (StackGui ${SOURCES})
    else()
	add_library (StackGui SHARED ${SOURCES})
    endif()	
endif()

if (NOT BUILDEM_DIR STREQUAL "None")
    include (qt4)
    include (vtk)
    include (boost)
    include (hdf5)
    include (jsoncpp) 
    add_dependencies (StackGui ${boost_NAME} ${hdf5_NAME} ${json_NAME} ${opencv_NAME} RescanQt4)
endif()

install (TARGETS StackGui DESTINATION lib${LIB_SUFFIX})
